<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    style="@style/Layout.Fill" >
<LinearLayout
    android:id="@+id/login_layout"
    style="@style/ScrollviewLightGray.FillParent" >
	<LinearLayout
	    android:id="@+id/list_item"
          style="@style/Alert.Container.Info" >
          <LinearLayout
          	style="@style/Layout.Horizontal"
          >
		     <ImageView
		        style="@style/Icon.Info"
		        />
		     <TextView
		      android:id="@+id/questionTextView"
		      android:text="@string/securityQuestionAuthDeniedCopyTop"
		      style="@style/Alert.Txt" />
          </LinearLayout>
        <View
		       style = "@style/LinerHorizontalLine.TopWrap" />
    </LinearLayout>
    

    <include
        android:id="@+id/mfa_error_message"
        layout="@layout/view_info" />
    
	<LinearLayout
	        style="@style/LinerLayout.Vertical.Actionbar" >
	    <Button
	        android:id="@+id/btn_call_866"
	        style = "@style/Button.Primary"
	        android:onClick="on866Click"
	        android:text="@string/securityQuestionAuthDeniedButtonCall1866" />
	
	    <Button
	        android:id="@+id/btn_call_416"
	        style = "@style/Button.Primary"
	        android:layout_marginTop="10dp"
	        android:onClick="on416Click"
	        android:text="@string/securityQuestionAuthDeniedButtonCall1416"/>
	</LinearLayout>
</LinearLayout>

    <ListView
        android:id="@+id/list_slidermenu"
        style="@style/Menu_Flyout" />

</android.support.v4.widget.DrawerLayout>