<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.td.innovate.savingstracker.onboard.TDCashFlowIntroductionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="@dimen/txt_medium"
        android:textColor="@color/dark_grey"
        android:typeface="normal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/welcome"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_tracker_icon"
        android:id="@+id/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/app_name"
        android:layout_below="@id/welcome"
        android:text="@string/app_name"
        android:textSize="21sp"
        android:typeface="normal"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/CTA"
        android:layout_alignParentBottom="true"
        android:text="@string/call_to_action_learn_more"
        android:textColor="@color/body_grey"
        android:textStyle="bold"
        android:textSize="@dimen/txt_small"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>