<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    style="@style/TableHeader"
    android:paddingBottom="0dip"
    android:paddingTop="0dip"
    android:paddingRight="0dip"
     >
		<LinearLayout 
		    android:id="@+id/dateHeader"
		    style="@style/ColumnHeaderCon"
		    android:layout_height="match_parent"
		    android:layout_weight="0.2"
		    android:paddingBottom="10dip"
		    android:paddingTop="10dip"
		    >
			<TextView
          	android:id="@+id/dateColumn"
            android:text="@string/date_str"
            style="@style/Txt_Sort"
            />
			<ImageView
			    android:id="@+id/dateSortImage"
		        style="@style/DownArrow"
		        />
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/descHeader"
		    style="@style/ColumnHeaderCon"
		    android:layout_height="match_parent"
		    android:layout_weight="0.6"
		    android:paddingBottom="10dip"
		    android:paddingTop="10dip"
		    >
			<TextView
          	android:id="@+id/descriptionColumn"
            android:text="@string/accountDetailCAAccountColumnHeadersDescription"
            style="@style/Txt_Sort"
            />
			<ImageView
			    android:id="@+id/descriptionSortImage"
		        style="@style/DownArrow"
		        />
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/amtHeader"
		    style="@style/ColumnHeaderCon"
		    android:layout_height="match_parent"
		    android:layout_weight="0.2"
		    android:paddingBottom="10dip"
		    android:paddingTop="10dip"
		    >
			<TextView
          	android:id="@+id/amountColumn"
            android:text="@string/amount_str"
            android:gravity="right"
            style="@style/Txt_Sort"
            />
			<ImageView
			    android:id="@+id/amountSortImage"
		        style="@style/DownArrow"
		        />
		</LinearLayout>

 </LinearLayout>