<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    style="@style/Layout.Fill"
>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <LinearLayout style="@style/Layout.Vertical" >

        <LinearLayout style="@style/Alert.Container.Success" >

            <LinearLayout style="@style/Layout.Horizontal" >

                <ImageView style="@style/Icon.Success" />

                <TextView
                    android:id="@+id/text"
                    style="@style/Alert.Txt.Sucess"
                    android:text="@string/logoutSuccessCopy" />
            </LinearLayout>

            <View style="@style/LinerHorizontalLine.TopWrap" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal|center"
            android:src="@drawable/blank_interac_etransfer"
            android:visibility="invisible" />

        <LinearLayout
            style="@style/LinerLayout.Horizontal.Actionbar"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/button1"
                style="@style/Button.Primary"
                android:text="@string/logoutSuccessApplyToday"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout style="@style/QuickContainer" >

            <View style="@style/LinerHorizontalLine" />

            <TableLayout
                android:id="@+id/upcomingbill_options_table"
                style="@style/QuickContainerInner" >

                <TableRow
                    android:id="@+id/tableRow1"
                    style="@style/Layout.TableRow" >

                    <ImageView
                        style="@style/QuickIcon"
                        android:onClick="launchHomeActivity"
                        android:src="@drawable/quick_home" />

                    <ImageView
                        style="@style/QuickIcon"
                        android:onClick="launchContactsActivity"
                        android:src="@drawable/call" />

                    <ImageView
                        style="@style/QuickIcon"
                        android:onClick="launchFindLocationsActivity"
                        android:src="@drawable/quick_locator" />

                    <!-- <ImageView
                        style="@style/QuickIcon"
                        android:onClick="launchLoginActivity"
                        android:src="@drawable/button_lock" /> -->
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    style="@style/Layout.TableRow" >

                    <TextView
                        style="@style/QuickTxt"
                        android:text="@string/logoutSuccessQuickTaskHome" />

                    <TextView
                        style="@style/QuickTxt"
                        android:text="@string/logoutSuccessQuickTaskContact" />

                    <TextView
                        style="@style/QuickTxt"
                        android:text="@string/logoutSuccessQuickTaskFindLocations" />

    <!--                 <TextView
                        style="@style/QuickTxt"
                        android:text="@string/logoutSuccessQuickTaskLogin" /> -->
                </TableRow>
            </TableLayout>

            <View style="@style/LinerHorizontalLine" />
        </LinearLayout>
    </LinearLayout>
    
    </ScrollView>

    <ListView
        android:id="@+id/list_slidermenu"
        style="@style/Menu_Flyout" />

</android.support.v4.widget.DrawerLayout>