<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.td.innovate.savingstracker.onboard.PYFExplanationFragment">

    <TextView
        android:id="@+id/pyfHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_yourself_first"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_pyf_icon"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:typeface="normal"
        android:textColor="@color/progress_yellow"
        android:textSize="@dimen/txt_large"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/pyf"
        android:layout_centerHorizontal="true"
        android:id="@+id/pyfInstruction"
        android:layout_below="@+id/pyfHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pyf_explanation"
        android:layout_centerHorizontal="true"
        android:textColor="@color/body_grey"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/pyfInstruction"
        android:textSize="@dimen/txt_small"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/call_to_action_get_started"
        android:textColor="@color/body_grey"
        android:textStyle="bold"
        android:textSize="@dimen/txt_small"
        android:layout_marginBottom="15dp"/>


</RelativeLayout>
